--- a/Template/Template.vcxproj.filters
+++ b/Template/Template.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="..\src\RollButton.cpp">
       <Filter>Game Objects</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Dice1.cpp">
+      <Filter>Game Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Game.h">
@@ -210,6 +213,9 @@
       <Filter>Game Objects</Filter>
     </ClInclude>
     <ClInclude Include="..\src\RollButton.h">
+      <Filter>Game Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Dice1.h">
       <Filter>Game Objects</Filter>
     </ClInclude>
   </ItemGroup>
